request logging 완료

--- a/logging.ini
+++ b/logging.ini
@@ -1,28 +1,17 @@
 [loggers]
-keys=root, gunicorn.error, gunicorn.access,uvicorn.error,uvicorn.access
+keys=root, uvicorn.error, uvicorn.access
 
 [handlers]
-keys=console, error_file, access_file, accesscustom
+keys=console, error_file, access_file
 
 [formatters]
-keys=generic, access, AccessFormatter
+keys=generic, access, error
+
 
 [logger_root]
 level=INFO
-handlers=console
-propagate=1
-
-[logger_gunicorn.error]
-level=INFO
-handlers=error_file
+handlers=
 propagate=0
-qualname=gunicorn.error
-
-[logger_gunicorn.access]
-level=INFO
-handlers=accesscustom
-propagate=0
-qualname=gunicorn.access
 
 [logger_uvicorn.error]
 level=INFO
@@ -32,18 +21,20 @@ qualname=uvicorn.error
 
 [logger_uvicorn.access]
 level=INFO
-handlers=accesscustom
+handlers=
 propagate=0
 qualname=uvicorn.access
 
+
+
 [handler_console]
 class=StreamHandler
-formatter=generic
+formatter=access
 args=(sys.stdout, )
 
 [handler_error_file]
 class=StreamHandler
-formatter=generic
+formatter=error
 args=(sys.stdout, )
 
 [handler_access_file]
@@ -51,24 +42,19 @@ class=StreamHandler
 formatter=access
 args=(sys.stdout, )
 
-[handler_accesscustom]
-class=StreamHandler
-formatter=AccessFormatter
-args=(sys.stdout, )
+
 
 [formatter_generic]
-format=%(levelname)s: %(message)s
+format=%(asctime)s.%(msecs)03d [%(levelname)s] %(module)s.%(funcName)s %(message)s
 datefmt=%Y-%m-%dT%H:%M:%S
 class=uvicorn.logging.DefaultFormatter
 
 [formatter_access]
-format=%(levelname)s: %(message)s
-datefmt=%Y-%m-%dT%H:%M:%S
-class=uvicorn.logging.ColourizedFormatter
-# class=src.logging.CustomFormatter
-
-[formatter_AccessFormatter]
 format=%(asctime)s.%(msecs)03d [%(levelname)s] %(module)s.%(funcName)s %(message)s
+datefmt=%Y-%m-%dT%H:%M:%S
+class=uvicorn.logging.DefaultFormatter
+
+[formatter_error]
+format=%(asctime)s.%(msecs)03d | %(levelprefix)8s | %(module)s.%(funcName)s | %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
-# class=src.logging.CustomFormatter
-class=uvicorn.logging.ColourizedFormatter
+class=uvicorn.logging.DefaultFormatter
