--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "args": [
                 "src.main:app",
                 "--log-config",
-                "logging.ini",
+                "logging.ini"
             ],
             "jinja": true,
             "justMyCode": true
